--- a/project/package.json
+++ b/project/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "assert": "^2.0.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
+    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
     "nprogress": "^0.2.0",
-    "vue": "^3.2.13",
+    "vue": "^3.2.37",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
