--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: biggib01/se331-project:latest
+          tags: biggib01/se331-project-v2:latest
       -
         name: docker-compose run
         uses: alex-ac/github-action-ssh-docker-compose@master
