--- a/.github/workflows/docker-deploy-prod.yml
+++ b/.github/workflows/docker-deploy-prod.yml
@@ -2,7 +2,7 @@ name: Deploy to Aws docker on merge
 'on':
   push:
     branches:
-      - prod
+      - prod-docker
 jobs:
   docker:
     runs-on: ubuntu-latest
