--- a/.github/workflows/docker-deploy-prod.yml
+++ b/.github/workflows/docker-deploy-prod.yml
@@ -1,14 +1,15 @@
-name: Deploy to Aws docker on merge
-'on':
+name: deploy on prod
+'on' :
   push:
     branches:
       - prod-docker
+
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
       -
-        name: Checkout
+        name: Checkoutout
         uses: actions/checkout@v2
       -
         name: Set up QEMU
@@ -21,20 +22,19 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
       -
         name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tags: biggib01/se331-project-v2:latest
+          tags: biggib01/se331-injection-need:latest
       -
-        name: docker-compose run
-        uses: alex-ac/github-action-ssh-docker-compose@master
-        with:
-          ssh_host: ${{ secrets.HOST_SERVER }}
-          ssh_private_key: ${{ secrets.HOST_SSH_PRIVATE_KEY }}
-          ssh_user: ${{ secrets.HOST_USER_NAME }}
-          docker_compose_prefix: vue-331
-          docker_compose_filename: "./docker-compose.yml"
+        name: prepare the docker compose run
+        run: |
+          mkdir se331-project-frontend
+          cp docker-compose.yml se331-project-frontend/docker-compose.yml
+          cd se331-project-frontend
+          docker-compose -H ${{ secrets.HOST_SERVER }} pull
+          docker-compose -H ${{ secrets.HOST_SERVER }} up -d
