--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-VUE_APP_BACKEND_URL=https://my-json-server.typicode.com/nonper/SE331-2022-Project-1
+ VUE_APP_BACKEND_URL=http://44.207.147.102:8080
